# spedy-api

./: CLAUDE.md  LICENSE  README.md  llm.txt  pyproject.toml
spedy_api/: __init__.py  _http.py  client.py  exceptions.py  models.py
spedy_api/resources/: _base.py  companies.py  product_invoices.py  service_invoices.py
tests/: conftest.py  test_client.py  test_companies.py  test_product_invoices.py  test_service_invoices.py
