[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spedy-api"
version = "0.1.0"
description = "Python SDK for the Spedy fiscal automation API"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["spedy_api"]
